Productos con animacion y css

--- a/Productos(usuario).html
+++ b/Productos(usuario).html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/coloreshoover.css">
     <title>Productos para Usuario</title>
 </head>
 <body>
-    
+
+    <div style="padding: 5px; color:#ffffff; 
+    font-weight:300; font-size: 30px; font-family: 'Roboto';
+    padding-top:20px" align="center" > Productos </div>
+
+        <div style="width:1000px;" >
+            <div class="style_prevu_kit"
+            style="background-color: #cb2025;"  > <img src="img/helado.jpg" width="196px" height="210px" align="center"> </div>
+            <br>
+            <div class="style_prevu_kit"
+            style="background-color: #f8b334;" > </div>
+            <br>
+            <div class="style_prevu_kit"
+            style="background-color: #97bf0d;" > </div>
+            <br>
+            <div class="style_prevu_kit"
+            style="background-color: #00a096;" > </div>
+            <br>
+            <div class="style_prevu_kit"
+            style="background-color: #93a6a8;" > </div>
+            <br>
+            <div class="style_prevu_kit"
+            style="background-color: #857182;" > </div>
+            <br>
+            
+            <a href="index.html">Regresar a Página Principal</a>  </div>
+        </div>
+
 </body>
 </html>
