Alineacion correcta del Footer

--- a/Productos(usuario).html
+++ b/Productos(usuario).html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/coloreshoover.css">
+    <link rel="stylesheet" href="css/productos.css">
     <title>Productos para Usuario</title>
 </head>
 <body  class="container" class="columna1">
@@ -49,12 +49,11 @@
             <div class="style_prevu_kit"
             style="background-color: #857182;" > </div>
             <br>
-            
-            <a href="index.html">Regresar a Página Principal</a>  </div>
+
         </div>
 
         <footer>   
-            <p class="texto" align="left">Contacto<br> 55-8009-9007<br>+52-55-6615-9516</p>
+            <p class="texto" align="left">Contacto<br> Ben_and_jerrys@benandjerrysOfficial.com<br>+52-55-6615-9516</p>
 
           </footer>
 
