--- a/Productos(usuario).html
+++ b/Productos(usuario).html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/productos.css">
+    <link rel="shortcut icon" href="img/ben&Jerry.png">
     <title>Productos para Usuario</title>
 </head>
-<body  class="container" class="columna1">
+<body  class="container" class="columna1" background="ben&Jerrys.jpg">
 
     
     <ul>
+
         <li>
             <a href="Inicio.html"> Inicio</a>
         </li>
