--- a/Productos(usuario).html
+++ b/Productos(usuario).html
@@ -12,14 +12,16 @@
 
     
     <ul>
-
-        <li>
+        <li style="float: left;padding-left:0;">
+            <a><img src="img/Ben_&_Jerry.png " style="margin-top: -5px;"> </a >  
+                 </li>
+        <li class="referencia">
             <a href="Inicio.html"> Inicio</a>
-        </li>
+        </li class="referencia">
         <li>
             <a href="Productos(usuario).html">Productos</a>
         </li>
-        <li >
+        <li class="referencia">
             <a href="Ideario.html">¿Quienes somos?</a>
         </li>
 
@@ -55,7 +57,8 @@
         </div>
 
         <footer>   
-            <p class="texto" align="left">Contacto<br> Ben_and_jerrys@benandjerrysOfficial.com<br>+52-55-6615-9516</p>
+            <p class="texto" align="left">Contacto<br> Ben_and_jerrys@ben-and-jerrys-Official.com
+                <br>+52-55-6615-9516</p>
 
           </footer>
 
