--- a/Productos(usuario).html
+++ b/Productos(usuario).html
@@ -30,8 +30,8 @@
         
     </ul>
 
-    <div style="padding: 5px; color:#ffffff; 
-    font-weight:300; font-size: 30px; font-family: 'Roboto';
+    <div style="padding: 5px; color:#000000; 
+    font-weight:300; font-size: 30px; font-family: 'c800';
     padding-top:20px" align="center" > Productos </div>
 
         <div style="width:1000px;" >
