Asemejación a la Pagina y Ya estoy harto del css

--- a/Productos(usuario).html
+++ b/Productos(usuario).html
@@ -29,14 +29,16 @@
                  </li>
         
     </ul>
-
-    <div style="padding: 5px; color:#000000; 
+<div class="container-label">
+    <div class="label">
+        <div style="padding: 5px; color:#000000; 
     font-weight:300; font-size: 30px; font-family: 'c800';
     padding-top:20px" align="center" > Productos </div>
 
         <div style="width:1000px;" >
-            <div class="style_prevu_kit"
-            style="background-color: #cb2025;"  > <img src="img/helado.jpg" width="196px" height="210px" align="center"> </div>
+            <div class="style_prevu_kit">
+        <img src="img/helado.png" width="196px" height="210px" align="center">
+        <p class="texto1" align="center">Comprar</p></div>
             <br>
             <div class="style_prevu_kit"
             style="background-color: #f8b334;" > </div>
@@ -53,8 +55,8 @@
             <div class="style_prevu_kit"
             style="background-color: #857182;" > </div>
             <br>
-
-        </div>
+    </div>
+</div>
 
         <footer>   
             <p class="texto" align="left">Contacto<br> Ben_and_jerrys@ben-and-jerrys-Official.com
